--- a/TRA/pom.xml
+++ b/TRA/pom.xml
@@ -72,6 +72,13 @@
 			<version>1.27.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.14.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
