--- a/TRA/pom.xml
+++ b/TRA/pom.xml
@@ -78,6 +78,11 @@
 			<version>3.14.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
